modify css and image

--- a/image/index.html
+++ b/image/index.html
@@ -64,12 +64,32 @@
                 <i class="iconfont icon-cart"></i>
             </div>
             <div class="hot-list part2">
-                <div class="list-goods part1">
+                <ul>
+                    <li class="list-goods part1 part-space">
                         <a href="#"><img src="https://api.mall.kuazhu.com/product-images/1587973772260.jpg" alt=""></a>
-                    <p>宏碁 (Acer) 极光 D606D 投影仪 投影机办公（普清 3500流明 标配HDMI 梯形校正 商用机皇新升级 白天直投）</p>
-                    <span class="price">&yen;9999</span>
-                    <span class="buy-num">0人已购买</span>
-                </div>
+                        <p>宏碁 (Acer) 极光 D606D 投影仪 投影机办公（普清 3500流明 标配HDMI 梯形校正 商用机皇新升级 白天直投）</p>
+                        <span class="price">&yen;9999</span>
+                        <span class="buy-num">0人已购买</span>
+                    </li>
+                    <li class="list-goods part1 part-space">
+                        <a href="#"><img src="https://api.mall.kuazhu.com/product-images/1587973772260.jpg" alt=""></a>
+                        <p>宏碁 (Acer) 极光 D606D 投影仪 投影机办公（普清 3500流明 标配HDMI 梯形校正 商用机皇新升级 白天直投）</p>
+                        <span class="price">&yen;9999</span>
+                        <span class="buy-num">0人已购买</span>
+                    </li>
+                    <li class="list-goods part1 part-space">
+                        <a href="#"><img src="https://api.mall.kuazhu.com/product-images/1587973772260.jpg" alt=""></a>
+                        <p>宏碁 (Acer) 极光 D606D 投影仪 投影机办公（普清 3500流明 标配HDMI 梯形校正 商用机皇新升级 白天直投）</p>
+                        <span class="price">&yen;9999</span>
+                        <span class="buy-num">0人已购买</span>
+                    </li>
+                    <li class="list-goods part1 part-space">
+                        <a href="#"><img src="https://api.mall.kuazhu.com/product-images/1587973772260.jpg" alt=""></a>
+                        <p>宏碁 (Acer) 极光 D606D 投影仪 投影机办公（普清 3500流明 标配HDMI 梯形校正 商用机皇新升级 白天直投）</p>
+                        <span class="price">&yen;9999</span>
+                        <span class="buy-num">0人已购买</span>
+                    </li>
+                </ul>
             </div>
         </div>
     </div> 
